# tax_calc

./: .gitignore  AGENTS.md  DESIGN.md  README.md  README.rst  build_exe.py  optimise_tax.py  pyproject.toml
.github/workflows/: build-windows-exe.yml
tests/: test_comprehensive.py  test_design_examples.py
