[project]
name = "tax-calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.rst"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.9.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "ruff>=0.14.3",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"
